Users image now saves properly

--- a/Fordly/Info.plist
+++ b/Fordly/Info.plist
@@ -35,6 +35,12 @@
 	<string>Your health data is stored in a file for use by the World State</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Your health data is stored in a file for use by the World State</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
