--- a/Fordly/Info.plist
+++ b/Fordly/Info.plist
@@ -35,6 +35,14 @@
 	<string>Your health data is stored in a file for use by the World State</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Your health data is stored in a file for use by the World State</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Fordly needs to access your location information to provide planning services</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Fordly needs to access your location information to provide planning services</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Fordly needs to access your location information to provide planning services</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Fordly needs to access your location information to provide planning services</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
