--- a/Fordly/Info.plist
+++ b/Fordly/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1-alpha</string>
+	<string>1.0.1</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -39,9 +39,9 @@
 	<string>Fordly needs to access your location information to provide planning services</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Fordly needs to access your location information to provide planning services</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Fordly needs to access your location information to provide planning services</string>
 	<key>NSLocationUsageDescription</key>
+	<string>Fordly needs to access your location information to provide planning services</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Fordly needs to access your location information to provide planning services</string>
 	<key>UIBackgroundModes</key>
 	<array>
